# spectacular

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy-docs.yml
crates/cargo-spectacular/: Cargo.toml
crates/cargo-spectacular/src/: event.rs  main.rs  runner.rs
crates/cargo-spectacular/src/formatter/: boring.rs  default.rs  mod.rs  pride.rs
crates/spectacular/: Cargo.toml
crates/spectacular-macros/: Cargo.toml
crates/spectacular-macros/src/: attr.rs  lib.rs  spec.rs
crates/spectacular/src/: lib.rs  report.rs  runner.rs  types.rs
crates/spectacular/tests/: failure_handling.rs  integration.rs  integration_async_feature.rs
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.md
docs/src/content/docs/getting-started/: installation.md  introduction.md  quick-start.md
docs/src/content/docs/guides/: attribute-style.md  hooks.md  spec-dsl.md  suite-hooks.md  test-runner.md
docs/src/content/docs/reference/: api.md  execution-order.md
docs/src/styles/: custom.css
