[package]
name = "cargo-spectacular"
version = "0.1.0"
edition = "2024"
description = "Custom test output formatter for spectacular — rainbow dots and more"
license = "MIT"
repository = "https://github.com/brianp/spectacular"
readme = "../../README.md"
keywords = ["testing", "test-framework", "formatter", "pride"]
categories = ["development-tools::testing"]

[[bin]]
name = "cargo-spectacular"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
