[package]
name = "spectacular-macros"
version = "0.2.0"
edition = "2024"
description = "Proc macros for the spectacular test framework"
license = "MIT"
repository = "https://github.com/brianp/spectacular"
readme = "../../README.md"
keywords = ["testing", "test-framework", "rspec", "hooks"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[features]
tokio = []
async-std = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
