[package]
name = "spectacular"
version = "0.2.0"
edition = "2024"
description = "An RSpec-inspired test framework for Rust with stackable before/after hooks"
license = "MIT"
repository = "https://github.com/brianp/spectacular"
readme = "../../README.md"
keywords = ["testing", "test-framework", "rspec", "hooks"]
categories = ["development-tools::testing"]

[features]
tokio = ["spectacular-macros/tokio"]
async-std = ["spectacular-macros/async-std"]

[dependencies]
spectacular-macros = { version = "0.2.0", path = "../spectacular-macros" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
